// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar test default rendering 1`] = `
<div
  class="calendar"
  data-testid="calendar"
>
  <div
    class="calendar__body"
  >
    <div
      class="month"
      data-testid="month-9"
    >
      <div
        class="month__header"
      >
        <span>
          September
        </span>
         
        <span>
          2022
        </span>
      </div>
      <table
        class="table"
      >
        <thead
          class="table__header"
        >
          <tr>
            <th>
              Mon
            </th>
            <th>
              Tue
            </th>
            <th>
              Wed
            </th>
            <th>
              Thu
            </th>
            <th>
              Fri
            </th>
            <th>
              Sat
            </th>
            <th>
              Sun
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr>
            <td
              class="table__td hidden"
              id="2022-09-29"
            />
            <td
              class="table__td hidden"
              id="2022-09-30"
            />
            <td
              class="table__td hidden"
              id="2022-09-31"
            />
            <td
              class="table__td"
              id="2022-09-01"
            >
              1
            </td>
            <td
              class="table__td"
              id="2022-09-02"
            >
              2
            </td>
            <td
              class="table__td"
              id="2022-09-03"
            >
              3
            </td>
            <td
              class="table__td"
              id="2022-09-04"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-05"
            >
              5
            </td>
            <td
              class="table__td"
              id="2022-09-06"
            >
              6
            </td>
            <td
              class="table__td"
              id="2022-09-07"
            >
              7
            </td>
            <td
              class="table__td"
              id="2022-09-08"
            >
              8
            </td>
            <td
              class="table__td"
              id="2022-09-09"
            >
              9
            </td>
            <td
              class="table__td"
              id="2022-09-10"
            >
              10
            </td>
            <td
              class="table__td"
              id="2022-09-11"
            >
              11
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-12"
            >
              12
            </td>
            <td
              class="table__td"
              id="2022-09-13"
            >
              13
            </td>
            <td
              class="table__td"
              id="2022-09-14"
            >
              14
            </td>
            <td
              class="table__td"
              id="2022-09-15"
            >
              15
            </td>
            <td
              class="table__td"
              id="2022-09-16"
            >
              16
            </td>
            <td
              class="table__td"
              id="2022-09-17"
            >
              17
            </td>
            <td
              class="table__td"
              id="2022-09-18"
            >
              18
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-19"
            >
              19
            </td>
            <td
              class="table__td selected"
              id="2022-09-20"
            >
              20
            </td>
            <td
              class="table__td"
              id="2022-09-21"
            >
              21
            </td>
            <td
              class="table__td"
              id="2022-09-22"
            >
              22
            </td>
            <td
              class="table__td"
              id="2022-09-23"
            >
              23
            </td>
            <td
              class="table__td"
              id="2022-09-24"
            >
              24
            </td>
            <td
              class="table__td"
              id="2022-09-25"
            >
              25
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-26"
            >
              26
            </td>
            <td
              class="table__td"
              id="2022-09-27"
            >
              27
            </td>
            <td
              class="table__td"
              id="2022-09-28"
            >
              28
            </td>
            <td
              class="table__td"
              id="2022-09-29"
            >
              29
            </td>
            <td
              class="table__td"
              id="2022-09-30"
            >
              30
            </td>
            <td
              class="table__td hidden"
              id="2022-09-01"
            />
            <td
              class="table__td hidden"
              id="2022-09-02"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="month"
      data-testid="month-10"
    >
      <div
        class="month__header"
      >
        <span>
          October
        </span>
         
        <span>
          2022
        </span>
      </div>
      <table
        class="table"
      >
        <thead
          class="table__header"
        >
          <tr>
            <th>
              Mon
            </th>
            <th>
              Tue
            </th>
            <th>
              Wed
            </th>
            <th>
              Thu
            </th>
            <th>
              Fri
            </th>
            <th>
              Sat
            </th>
            <th>
              Sun
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr>
            <td
              class="table__td hidden"
              id="2022-10-26"
            />
            <td
              class="table__td hidden"
              id="2022-10-27"
            />
            <td
              class="table__td hidden"
              id="2022-10-28"
            />
            <td
              class="table__td hidden"
              id="2022-10-29"
            />
            <td
              class="table__td hidden"
              id="2022-10-30"
            />
            <td
              class="table__td"
              id="2022-10-01"
            >
              1
            </td>
            <td
              class="table__td"
              id="2022-10-02"
            >
              2
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-03"
            >
              3
            </td>
            <td
              class="table__td"
              id="2022-10-04"
            >
              4
            </td>
            <td
              class="table__td"
              id="2022-10-05"
            >
              5
            </td>
            <td
              class="table__td"
              id="2022-10-06"
            >
              6
            </td>
            <td
              class="table__td"
              id="2022-10-07"
            >
              7
            </td>
            <td
              class="table__td"
              id="2022-10-08"
            >
              8
            </td>
            <td
              class="table__td"
              id="2022-10-09"
            >
              9
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-10"
            >
              10
            </td>
            <td
              class="table__td"
              id="2022-10-11"
            >
              11
            </td>
            <td
              class="table__td"
              id="2022-10-12"
            >
              12
            </td>
            <td
              class="table__td"
              id="2022-10-13"
            >
              13
            </td>
            <td
              class="table__td"
              id="2022-10-14"
            >
              14
            </td>
            <td
              class="table__td"
              id="2022-10-15"
            >
              15
            </td>
            <td
              class="table__td"
              id="2022-10-16"
            >
              16
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-17"
            >
              17
            </td>
            <td
              class="table__td"
              id="2022-10-18"
            >
              18
            </td>
            <td
              class="table__td"
              id="2022-10-19"
            >
              19
            </td>
            <td
              class="table__td"
              id="2022-10-20"
            >
              20
            </td>
            <td
              class="table__td"
              id="2022-10-21"
            >
              21
            </td>
            <td
              class="table__td"
              id="2022-10-22"
            >
              22
            </td>
            <td
              class="table__td"
              id="2022-10-23"
            >
              23
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-24"
            >
              24
            </td>
            <td
              class="table__td"
              id="2022-10-25"
            >
              25
            </td>
            <td
              class="table__td"
              id="2022-10-26"
            >
              26
            </td>
            <td
              class="table__td"
              id="2022-10-27"
            >
              27
            </td>
            <td
              class="table__td"
              id="2022-10-28"
            >
              28
            </td>
            <td
              class="table__td"
              id="2022-10-29"
            >
              29
            </td>
            <td
              class="table__td"
              id="2022-10-30"
            >
              30
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-31"
            >
              31
            </td>
            <td
              class="table__td hidden"
              id="2022-10-01"
            />
            <td
              class="table__td hidden"
              id="2022-10-02"
            />
            <td
              class="table__td hidden"
              id="2022-10-03"
            />
            <td
              class="table__td hidden"
              id="2022-10-04"
            />
            <td
              class="table__td hidden"
              id="2022-10-05"
            />
            <td
              class="table__td hidden"
              id="2022-10-06"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="calendar__footer"
  >
    <button
      class="calendar__footer--btn"
    >
      <span>
        ×
      </span>
       Clear dates
    </button>
  </div>
</div>
`;

exports[`Calendar test render arrows 1`] = `
<div
  class="calendar"
  data-testid="calendar"
>
  <div
    class="calendar__arrows"
    data-testid="arrows"
  >
    <button
      class="calendar__arrows--prev"
      data-testid="prev"
    >
      ←
    </button>
    <button
      class="calendar__arrows--next"
      data-testid="next"
    >
      →
    </button>
  </div>
  <div
    class="calendar__body"
  >
    <div
      class="month"
      data-testid="month-9"
    >
      <div
        class="month__header"
      >
        <span>
          September
        </span>
         
        <span>
          2022
        </span>
      </div>
      <table
        class="table"
      >
        <thead
          class="table__header"
        >
          <tr>
            <th>
              Mon
            </th>
            <th>
              Tue
            </th>
            <th>
              Wed
            </th>
            <th>
              Thu
            </th>
            <th>
              Fri
            </th>
            <th>
              Sat
            </th>
            <th>
              Sun
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr>
            <td
              class="table__td hidden"
              id="2022-09-29"
            />
            <td
              class="table__td hidden"
              id="2022-09-30"
            />
            <td
              class="table__td hidden"
              id="2022-09-31"
            />
            <td
              class="table__td"
              id="2022-09-01"
            >
              1
            </td>
            <td
              class="table__td"
              id="2022-09-02"
            >
              2
            </td>
            <td
              class="table__td"
              id="2022-09-03"
            >
              3
            </td>
            <td
              class="table__td"
              id="2022-09-04"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-05"
            >
              5
            </td>
            <td
              class="table__td"
              id="2022-09-06"
            >
              6
            </td>
            <td
              class="table__td"
              id="2022-09-07"
            >
              7
            </td>
            <td
              class="table__td"
              id="2022-09-08"
            >
              8
            </td>
            <td
              class="table__td"
              id="2022-09-09"
            >
              9
            </td>
            <td
              class="table__td"
              id="2022-09-10"
            >
              10
            </td>
            <td
              class="table__td"
              id="2022-09-11"
            >
              11
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-12"
            >
              12
            </td>
            <td
              class="table__td"
              id="2022-09-13"
            >
              13
            </td>
            <td
              class="table__td"
              id="2022-09-14"
            >
              14
            </td>
            <td
              class="table__td"
              id="2022-09-15"
            >
              15
            </td>
            <td
              class="table__td"
              id="2022-09-16"
            >
              16
            </td>
            <td
              class="table__td"
              id="2022-09-17"
            >
              17
            </td>
            <td
              class="table__td"
              id="2022-09-18"
            >
              18
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-19"
            >
              19
            </td>
            <td
              class="table__td selected"
              id="2022-09-20"
            >
              20
            </td>
            <td
              class="table__td"
              id="2022-09-21"
            >
              21
            </td>
            <td
              class="table__td"
              id="2022-09-22"
            >
              22
            </td>
            <td
              class="table__td"
              id="2022-09-23"
            >
              23
            </td>
            <td
              class="table__td"
              id="2022-09-24"
            >
              24
            </td>
            <td
              class="table__td"
              id="2022-09-25"
            >
              25
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-09-26"
            >
              26
            </td>
            <td
              class="table__td"
              id="2022-09-27"
            >
              27
            </td>
            <td
              class="table__td"
              id="2022-09-28"
            >
              28
            </td>
            <td
              class="table__td"
              id="2022-09-29"
            >
              29
            </td>
            <td
              class="table__td"
              id="2022-09-30"
            >
              30
            </td>
            <td
              class="table__td hidden"
              id="2022-09-01"
            />
            <td
              class="table__td hidden"
              id="2022-09-02"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="month"
      data-testid="month-10"
    >
      <div
        class="month__header"
      >
        <span>
          October
        </span>
         
        <span>
          2022
        </span>
      </div>
      <table
        class="table"
      >
        <thead
          class="table__header"
        >
          <tr>
            <th>
              Mon
            </th>
            <th>
              Tue
            </th>
            <th>
              Wed
            </th>
            <th>
              Thu
            </th>
            <th>
              Fri
            </th>
            <th>
              Sat
            </th>
            <th>
              Sun
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr>
            <td
              class="table__td hidden"
              id="2022-10-26"
            />
            <td
              class="table__td hidden"
              id="2022-10-27"
            />
            <td
              class="table__td hidden"
              id="2022-10-28"
            />
            <td
              class="table__td hidden"
              id="2022-10-29"
            />
            <td
              class="table__td hidden"
              id="2022-10-30"
            />
            <td
              class="table__td"
              id="2022-10-01"
            >
              1
            </td>
            <td
              class="table__td"
              id="2022-10-02"
            >
              2
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-03"
            >
              3
            </td>
            <td
              class="table__td"
              id="2022-10-04"
            >
              4
            </td>
            <td
              class="table__td"
              id="2022-10-05"
            >
              5
            </td>
            <td
              class="table__td"
              id="2022-10-06"
            >
              6
            </td>
            <td
              class="table__td"
              id="2022-10-07"
            >
              7
            </td>
            <td
              class="table__td"
              id="2022-10-08"
            >
              8
            </td>
            <td
              class="table__td"
              id="2022-10-09"
            >
              9
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-10"
            >
              10
            </td>
            <td
              class="table__td"
              id="2022-10-11"
            >
              11
            </td>
            <td
              class="table__td"
              id="2022-10-12"
            >
              12
            </td>
            <td
              class="table__td"
              id="2022-10-13"
            >
              13
            </td>
            <td
              class="table__td"
              id="2022-10-14"
            >
              14
            </td>
            <td
              class="table__td"
              id="2022-10-15"
            >
              15
            </td>
            <td
              class="table__td"
              id="2022-10-16"
            >
              16
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-17"
            >
              17
            </td>
            <td
              class="table__td"
              id="2022-10-18"
            >
              18
            </td>
            <td
              class="table__td"
              id="2022-10-19"
            >
              19
            </td>
            <td
              class="table__td"
              id="2022-10-20"
            >
              20
            </td>
            <td
              class="table__td"
              id="2022-10-21"
            >
              21
            </td>
            <td
              class="table__td"
              id="2022-10-22"
            >
              22
            </td>
            <td
              class="table__td"
              id="2022-10-23"
            >
              23
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-24"
            >
              24
            </td>
            <td
              class="table__td"
              id="2022-10-25"
            >
              25
            </td>
            <td
              class="table__td"
              id="2022-10-26"
            >
              26
            </td>
            <td
              class="table__td"
              id="2022-10-27"
            >
              27
            </td>
            <td
              class="table__td"
              id="2022-10-28"
            >
              28
            </td>
            <td
              class="table__td"
              id="2022-10-29"
            >
              29
            </td>
            <td
              class="table__td"
              id="2022-10-30"
            >
              30
            </td>
          </tr>
          <tr>
            <td
              class="table__td"
              id="2022-10-31"
            >
              31
            </td>
            <td
              class="table__td hidden"
              id="2022-10-01"
            />
            <td
              class="table__td hidden"
              id="2022-10-02"
            />
            <td
              class="table__td hidden"
              id="2022-10-03"
            />
            <td
              class="table__td hidden"
              id="2022-10-04"
            />
            <td
              class="table__td hidden"
              id="2022-10-05"
            />
            <td
              class="table__td hidden"
              id="2022-10-06"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="calendar__footer"
  >
    <button
      class="calendar__footer--btn"
    >
      <span>
        ×
      </span>
       Clear dates
    </button>
  </div>
</div>
`;
